--- a/dataVisualization（1600-900，数据可视化）.html
+++ b/dataVisualization（1600-900，数据可视化）.html
@@ -9,10 +9,10 @@
 <body>
 <!--背景视频-->
 <div class="m-bg-video">
-    <!-- <video id="videoPlay" poster="./img/bjPic.jpg" controls="controls" muted="true" autoplay="autoplay" loop="loop" style="width: 100%;">
-        <source src="./img/video2.mp4">
+    <video id="videoPlay" poster="./img/bjPic.jpg" controls="controls" muted="true" autoplay="autoplay" loop="loop" style="width: 100%;">
+        <source src="">
         你的浏览器不支持HTML5视频播放
-    </video> -->
+    </video>
 </div>
 
 <div class="container" :class="[styleType ? 'styleType1' : 'styleType2']" v-cloak>
